namespace SpellCheckingTool.Application.WordDto;

public class WordDto
{
    public string Word { get; set; } = "";
}