namespace SpellCheckingTool
{
    internal interface IExecutableParser
    {
        public WordTree GetAllShellExecutables();
    }
}
